--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   elasticsearch:
     image: wazuh/wazuh-indexer:4.9.0
-    container_name: elasticsearch
+    container_name: wazuh-indexer
     environment:
-      - OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m
+      - OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g
       - discovery.type=single-node
       - cluster.name=wazuh-cluster
       - network.host=0.0.0.0
@@ -17,6 +17,7 @@ services:
         hard: 65536
     volumes:
       - siem_esdata:/var/lib/wazuh-indexer
+      - ./wazuh/indexer_conf/opensearch.yml:/usr/share/wazuh-indexer/opensearch.yml:ro
     networks:
       - orchestration_net
 
@@ -50,34 +51,24 @@ services:
       - server.ssl.certificate=/etc/wazuh-dashboard/certs/dashboard.pem
       - server.ssl.certificateAuthorities=[ "/etc/wazuh-dashboard/certs/root-ca.pem" ]
       - WAZUH_ADMIN_PASSWORD=${WAZUH_ADMIN_PASSWORD}
+    depends_on:
+      - wazuh-indexer
     volumes:
       - ./wazuh/dashboard_certs:/etc/wazuh-dashboard/certs:ro
-      - ./wazuh/opensearch_dashboards.yml:/usr/share/wazuh-dashboard/config/opensearch_dashboards.yml:ro
-    networks:
-      - orchestration_net
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.14.3
-    container_name: kibana
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ENTERPRISESEARCH_HOSTS=http://elasticsearch:9200
-      - KIBANA_ENROLLMENT_SETUP_MODE_ENABLED=false
-      - xpack.security.enabled=false
+#      - ./wazuh/opensearch_dashboards.yml:/usr/share/wazuh-dashboard/config/opensearch_dashboards.yml:ro
     networks:
       - orchestration_net
 
   logstash:
     image: docker.elastic.co/logstash/logstash:8.14.3
     container_name: logstash
+    environment:
+      - LS_JAVA_OPTS=-Xms512m -Xmx512m
     volumes:
       - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
       - ./logstash/logstash.yml:/usr/share/logstash/config/logstash.yml
     ports:
       - "5044:5044"
-    depends_on:
-      elasticsearch:
-        condition: service_started
     networks:
       - orchestration_net
 
@@ -87,10 +78,9 @@ services:
     user: root
     volumes:
       - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/var/run/docker.sock:/var/run/docker.sock:ro
       - /var/log:/var/log/host:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-    depends_on:
-      - logstash
     networks:
       - orchestration_net
 
@@ -101,9 +91,6 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "80:80"
-      - "8080:8080"
-    depends_on:
-      - kibana
     networks:
       - orchestration_net
 
