Switch output from Elasticsearch to OpenSearch

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -17,8 +17,8 @@ filter {
 }
 
 output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "logstash-soc-%{+YYYY.MM.dd}"
+  opensearch {
+    hosts => ["http://wazuh-indexer:9200"]
+    index => "logstash-%{+YYYY.MM.dd}"
   }
 }
