Update Logstash configuration for input and output
Removed syslog input configuration and updated output to use Elasticsearch instead of OpenSearch with a new index pattern.

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -2,15 +2,11 @@ input {
   beats {
     port => 5044
   }
-  syslog {
-    port => 5514
-    type => "syslog"
-  }
 }
 
 output {
-  opensearch {
+  elasticsearch {
     hosts => ["http://wazuh-indexer:9200"]
-    index => "logstash-%{+YYYY.MM.dd}"
+    index => "wazuh-alerts-%{+YYYY.MM.dd}"
   }
 }
