Change Elasticsearch output to use HTTPS
Updated Elasticsearch output configuration to use HTTPS and enabled SSL.

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -6,7 +6,9 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["http://wazuh-indexer:9200"]
+    hosts => ["https://wazuh-indexer:9200"]
+    ssl => true
+    ssl_certificate_verification => false
     index => "wazuh-alerts-%{+YYYY.MM.dd}"
   }
 }
