--- a/wazuh/wazuh_dashboard.yml
+++ b/wazuh/wazuh_dashboard.yml
@@ -1,6 +1,6 @@
 server.name: wazuh-dashboard
 server.host: "0.0.0.0"
-opensearch.hosts: ["http://elasticsearch:9200"]
+opensearch.hosts: ["https://wazuh-indexer:9200"]
 server.ssl.enabled: true
 server.ssl.key: /etc/wazuh-dashboard/certs/dashboard-key.pem
 server.ssl.certificate: /etc/wazuh-dashboard/certs/dashboard.pem
