--- a/wazuh/opensearch_dashboards.yml
+++ b/wazuh/opensearch_dashboards.yml
@@ -2,8 +2,12 @@ server.name: wazuh-dashboard
 server.host: "0.0.0.0"
 server.port: 5601
 opensearch.hosts: ["https://wazuh-indexer:9200"]
+opensearch.ssl.verificationMode: none
 server.ssl.enabled: true
 server.ssl.key: /etc/wazuh-dashboard/certs/dashboard-key.pem
 server.ssl.certificate: /etc/wazuh-dashboard/certs/dashboard.pem
 server.ssl.certificateAuthorities: ["/etc/wazuh-dashboard/certs/root-ca.pem"]
+wazuh.api.url: "https://wazuh-manager:55000"
+wazuh.api.user: "admin"
+wazuh.api.pass: "${WAZUH_ADMIN_PASSWORD}"
 uiSettings.overrides.defaultRoute: /app/wazuh
