--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
       - discovery.type=single-node
       - cluster.name=wazuh-cluster
       - network.host=0.0.0.0
-      - plugins.security.disabled=true
+      - plugins.security.disabled=false
+      - plugins.security.ssl.http.enabled=true
+      - plugins.security.ssl.http.pemcert_filepath=certs/wazuh-indexer.pem
+      - plugins.security.ssl.http.pemkey_filepath=certs/wazuh-indexer-key.pem
+      - plugins.security.ssl.http.pemtrustedcas_filepath=certs/root-ca.pem
     ulimits:
       memlock:
         soft: -1
@@ -18,6 +22,7 @@ services:
     volumes:
       - siem_esdata:/var/lib/wazuh-indexer
       - ./wazuh/indexer_conf/opensearch.yml:/usr/share/wazuh-indexer/opensearch.yml:ro
+      - ./wazuh/indexer_conf/certs:/usr/share/wazuh-indexer/config/certs:ro
     networks:
       - orchestration_net
 
@@ -52,11 +57,9 @@ services:
       - server.ssl.certificate=/etc/wazuh-dashboard/certs/dashboard.pem
       - server.ssl.certificateAuthorities=[ "/etc/wazuh-dashboard/certs/root-ca.pem" ]
       - WAZUH_ADMIN_PASSWORD=${WAZUH_ADMIN_PASSWORD}
-    depends_on:
-      - wazuh-indexer
     volumes:
       - ./wazuh/dashboard_certs:/etc/wazuh-dashboard/certs:ro
-#      - ./wazuh/opensearch_dashboards.yml:/usr/share/wazuh-dashboard/config/opensearch_dashboards.yml:ro
+      - ./wazuh/opensearch_dashboards.yml:/usr/share/wazuh-dashboard/config/opensearch_dashboards.yml:ro
     networks:
       - orchestration_net
 
