Modify OpenSearch and SSL settings in configuration
Updated OpenSearch and SSL configuration for Wazuh dashboard.

--- a/wazuh/opensearch_dashboards.yml
+++ b/wazuh/opensearch_dashboards.yml
@@ -1,10 +1,17 @@
 server.name: wazuh-dashboard
 server.host: "0.0.0.0"
 server.port: 5601
+
 opensearch.hosts: ["https://wazuh-indexer:9200"]
-opensearch.ssl.verificationMode: none
+opensearch.username: "${INDEXER_USERNAME}"
+opensearch.password: "${INDEXER_PASSWORD}"
+
+opensearch.ssl.verificationMode: certificate
+opensearch.ssl.certificateAuthorities: ["/usr/share/wazuh-dashboard/certs/root-ca.pem"]
+opensearch.ssl.certificate: "/usr/share/wazuh-dashboard/certs/wazuh-dashboard.pem"
+openserch.ssl.key: "/usr/share/wazuh-dashboard/certs/wazuh-dashboard-key.pem"
+
 server.ssl.enabled: true
-server.ssl.key: /etc/wazuh-dashboard/certs/dashboard-key.pem
-server.ssl.certificate: /etc/wazuh-dashboard/certs/dashboard.pem
-server.ssl.certificateAuthorities: ["/etc/wazuh-dashboard/certs/root-ca.pem"]
-uiSettings.overrides.defaultRoute: /app/wazuh
+server.ssl.key: /usr/share/wazuh-dashboard/certs/dashboard-key.pem
+server.ssl.certificate: /usr/share/wazuh-dashboard/certs/dashboard.pem
+server.certificateAuthorities: ["/usr/share/wazuh-dashboard/certs/root-ca.pem"]
