--- a/wazuh/indexer_conf/opensearch.yml
+++ b/wazuh/indexer_conf/opensearch.yml
@@ -11,3 +11,5 @@ plugins.security.ssl.transport.enabled: true
 plugins.security.ssl.transport.pemcert_filepath: certs/wazuh-indexer.pem
 plugins.security.ssl.transport.pemkey_filepath: certs/wazuh-indexer-key.pem
 plugins.security.ssl.transport.pemtrustedcas_filepath: certs/root-ca.pem
+plugins.security.authcz.admin_dn:
+  - "CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US"
