--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,16 @@ http {
   server {
     listen 80;
     server_name _;
+    return 301 https://$host$request_uri;
+  }
+  server {
+    listen  443 ssl;
+    server_name _;
+    ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    
     location / {
       proxy_pass https://wazuh-dashboard:5601;
       proxy_connect_timeout 300s;
