Update .env.example with quotes for credentials

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
+# 0. Dashboard default credentials (can't work around yet)
+WAZUH_API_USER='wazuh'
+WAZUH_API_PASSWORD='wazuh'
+
 # 1. Indexer Credentials (Internal & API)
-INDEXER_USERNAME=admin
-INDEXER_PASSWORD=P@ssw0rd
+INDEXER_USERNAME='admin'
+INDEXER_PASSWORD='P@ssw0rd'
 
 # 2. Indexer Password Hash (BCrypt)
 # This hash must match the INDEXER_PASSWORD above.
